feat: add common user greeting screen with sessionStorage

--- a/home.html
+++ b/home.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="login.js"></script>
+
 </head>
-<body>
-    <h1>home usuario comum</h1>
+<body onload="database(); logado();">
+    <h1 style="font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;">Olá <span id="nome-usuario"></span>! Seja bem-vindo.</h1>
 </body>
 </html>
