--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <script src="login.js"></script>
 </head>
-<body>
-    
+<body onload="database()">
     <div style="display: flex; width: 70%; margin: auto; justify-content: center; align-items: center; flex-direction: column;">
         <form id="loginForm" style="margin-top: 150px;">
             <h2>Login</h2>
